2022-05-16  Youenn Fablet  <youenn@apple.com>

        Add logging when taking a process assertion synchronously
        https://bugs.webkit.org/show_bug.cgi?id=240334

        Reviewed by Chris Dumez.

        No observable change of behavior.

        * UIProcess/ios/ProcessAssertionIOS.mm:
        (WebKit::ProcessAssertion::acquireSync):

2022-04-14  Wenson Hsieh  <wenson_hsieh@apple.com>

        [iOS] [WK2] Managed pasteboard should function for all managed domains
        https://bugs.webkit.org/show_bug.cgi?id=239319
        rdar://80059355

        Reviewed by Kate Cheney.

        Unless a WebKit client has specified a data owner for the web view that is not _UIDataOwnerUndefined, fall back
        to _UIDataOwnerEnterprise when the current domain of the WKWebView is managed (that is, `-[MCProfileConnection
        isURLManaged:]` returns YES for the web view's current URL). This allows managed pasteboard to work for all
        WebKit clients, if the current URL is managed.

        Test: UIPasteboardTests.PerformAsDataOwnerWithManagedURL

        * Platform/spi/ios/UIKitSPI.h:

        Drive-by fix: move the staged declarations of `-_dataOwnerForCopy` and `-_dataOwnerForPaste` out of the IPI
        section, and into the non-internal SDK section.

        * UIProcess/ios/WKContentViewInteraction.mm:
        (-[WKContentView _dataOwnerForPasteboard:]):

2022-04-22  Kimmo Kinnunen  <kkinnunen@apple.com>

        Multiple concurrency violations in LibWebRTCCodecsProxy
        https://bugs.webkit.org/show_bug.cgi?id=236767
        <rdar://88904160>

        Reviewed by Antti Koivisto.

        - ThreadMessageReceivers should not add IPC listeners in constructors,
        as the delivery starts right away and uses the unconstructed virtual pointer.
        - The work queue functions should not use GPUConnectionToWebProcess, as that is
        main thread object.
        - Locked m_encoders, m_decoders are sometimes accessed without lock.

        Instead: