@@ -1,3 +1,12 @@
+2022-04-14  Wenson Hsieh  <wenson_hsieh@apple.com>
+
+        Unreviewed, fix the Catalyst build after r292888
+
+        `MCProfileConnection` is not available on Mac Catalyst.
+
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (-[WKContentView _dataOwnerForPasteboard:]):
+
 2022-05-16  Youenn Fablet  <youenn@apple.com>
 
         Add logging when taking a process assertion synchronously
